# Kafka_experiments

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_consumer.py  send_message.py  send_test_message.py
docker/: docker-compose.yml
docker/monitoring/grafana/provisioning/dashboards/: kafka_dashboard.json
docker/monitoring/grafana/provisioning/datasources/: datasource.yml
docker/monitoring/jmx-exporter/: config.yml
docker/monitoring/prometheus/: prometheus.yml
docker/postgresql/: init.sql
kafkavenv/: pyvenv.cfg
src/Kafka_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: settings.py
src/consumer/: message_consumer.py
src/models/: message.py
src/producer/: message_producer.py
tests/: conftest.py  test_consumer.py  test_producer.py
