[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Kafka_experiment"  # Replace with your project name
version = "0.1.0"
description = "Your project description"
authors = [{ name = "Your Name", email = "your.email@example.com" }]  # Replace with your details
dependencies = [
    "confluent-kafka==2.3.0",  # Specify the version you want
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "six==1.16.0"
]
